<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search_group.edition.SearchGroupEditionActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/group_editor_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/default_group_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/search_group_edition_information_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/group_edit_base_location_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/base_location_label"
                        android:textAlignment="viewEnd"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/group_edit_operators"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/group_edition_operators_label"
                        android:textAlignment="viewEnd"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/group_edit_operators_linear_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/group_edit_operator_recyclerview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/group_edit_add_operator_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/group_edit_add_operator"
                            android:textColor="@color/colorAccent"
                            android:textSize="20sp" />

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/group_edit_rescuers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/group_edition_rescuers_label"
                        android:textAlignment="viewEnd"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/group_edit_rescures_linear_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/group_edit_rescuer_recyclerview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/group_edit_add_rescuer_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/group_edit_add_rescuer"
                            android:textColor="@color/colorAccent"
                            android:textSize="20sp" />

                    </LinearLayout>

                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <Button
            android:id="@+id/search_group_edition_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onGroupEditCanceled"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/search_group_edition_create_or_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onGroupEditSaved"
            android:text="@string/group_edition_create_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
